# cc.fyi.zip.cracker

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  conanfile.txt
.github/workflows/: build.yml
ci/: build.sh  requirements.txt
src/main/: brute.hpp  decrypter.hpp  dictionary.hpp  zip.cpp
src/main 3/: CMakeLists.txt  crc32.hpp  inflater.hpp  storage.hpp  transformer.hpp  visitor.hpp  zip-cracker.cpp  zip.hpp
src/test/: test_zip_files.hpp  tests.cpp
src/test 3/: CMakeLists.txt  test_zip_files.hpp.mako
